@@ -4,6 +4,7 @@ Change history for glaciers
 
 HIGHEST PRIORITY:
 - visual representation of snowfall (gradient paint, clipped to sky)
+- valley model for x<0 that matches background image
 
 HIGH PRIORITY:
 - make sure everything works properly when clock is paused
@@ -80,6 +81,7 @@ CLEANUP:
 
 
 DONE:
+7/22/08 - workaround: for all x<0, use Valley.getElevation(0) (until we have a model for x<0 that matches background images and works with tools)
 7/21/08 - fix: right arrow should have same maxX constraint as pan control
 ******* 0.00.33 (23363)
 7/21/08 - size of mountains.png exceeds JVM heap space, chop down the image as much as possible
